FIX: My orders list too wide on large screens + undefined value fix

--- a/app/styles/_my_orders.scss
+++ b/app/styles/_my_orders.scss
@@ -1,5 +1,12 @@
 .my_orders {
 
+  @media #{$large-up} {
+    &.row {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+  }
+
   .title {
     font-weight: bold;
     font-size: 1rem;
